# workwechat-interface

./: .gitignore  .travis.yml  README.md  pyproject.toml  test_httpbin.py
httprunner_yaosansan/: loader.py  runner.py  validate.py
tests/: test_loader.py  test_runner.py  test_validate.py
tests/api/: httpbin_get.yml  httpbin_post.yml
tests/testcases/: mubu_login.yml
