[tool.poetry]
name = "workwechat-interface"
version = "0.1.0"
description = ""
authors = ["xiebo <shieber@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
